--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_spring_boot_udemy?us
 spring.datasource.username=root
 spring.datasource.password=123456
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#flyway config.
+flyway.url=jdbc:mysql://localhost:3306/
+flyway.schemas=rest_with_spring_boot_udemy
+flyway.user=root
+flyway.password=admin123
