--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ flyway.url=jdbc:mysql://localhost:3306/
 flyway.schemas=rest_with_spring_boot_udemy
 flyway.user=root
 flyway.password=admin123
+
+#Erro
